# SETR_Assignment1

./: CMakeLists.txt  Doxyfile  Makefile  README.md  dll.c  dll.h  dllFind.c  dllFindNext.c  dllFindPrevious.c  dllRemove.c  dll_init.c  dll_insert.c  main.c  testcommitvs.c
LibFolder/: CMakeLists.txt  dll.c
html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeCache_8txt.html  CMakeFiles_2main_8dir_2link_8txt.html  CMakeLists_8txt.html  LibFolder_2CMakeFiles_2LibFolder_8dir_2link_8txt.html  LibFolder_2CMakeLists_8txt.html  LibFolder_2dll_8h.html  LibFolder_2dll_8h__dep__incl.dot  LibFolder_2dll_8h__incl.dot  LibFolder_2dll_8h_source.html  README_8md.html  TargetDirectories_8txt.html  annotated.html  classes.html  count_8txt.html  dir_0cb4f84050056722b7c13fc7f317414f.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_51c279fd8104501253f54449f0923744.html  dir_58f03a61d600c30e61c7a79d21688456.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_74a23fb015c5d13964d4c8cd0c956841.html  dir_9add6e423e5099e88bbbc35c0aea843c.html  dir_e9d2c87952e388da8e570b477721a3fc.html  dir_eda783fe8aba33f726601975cfffbdf9.html  dll_8c.html  dll_8c__incl.dot  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  (+13 more)
latex/: CMakeFiles_2main_8dir_2link_8txt.tex  CMakeLists_8txt.tex  LibFolder_2CMakeFiles_2LibFolder_8dir_2link_8txt.tex  (+29 more)
(+47 files in other folders)
